--- a/frontend/src/pages/ProfilePage/components/TagsList/tagsList.module.css
+++ b/frontend/src/pages/ProfilePage/components/TagsList/tagsList.module.css
@@ -5,26 +5,26 @@
 }
 
 .tag {
-  background-color: #f0f0f0;
+  background-color: var(--tag-background);
   padding: 6px 12px;
   border-radius: 20px;
   font-size: 14px;
-  color: #333;
+  color: var(--tag-color);
   position: relative;
 }
 
 .commonInterest {
-  background-color: #d6e4ff;
-  border: 1px solid #202C83;
-  color: #6c5ce7;
+  background-color: rgba(79, 209, 197, 0.2);
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
 }
 
 .commonBadge {
   position: absolute;
   top: -8px;
   right: -5px;
-  background-color: #202C83;
-  color: white;
+  background-color: var(--primary-color);
+  color: var(--text-color);
   font-size: 10px;
   padding: 2px 6px;
   border-radius: 10px;
