--- a/frontend/src/shared/components/NavBar/navBar.css
+++ b/frontend/src/shared/components/NavBar/navBar.css
@@ -3,8 +3,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: white;
-  box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.1);
+  background-color: var(--section-background);
+  box-shadow: 0px -2px 4px var(--shadow-color);
   z-index: 1000;
   width: 100%;
 }
@@ -26,17 +26,20 @@
   justify-content: center;
   flex: 1;
   text-decoration: none;
-  color: rgba(0, 0, 0, 0.6);
+  color: var(--secondary-text-color);
   height: 100%;
   padding: 0.5rem;
 }
 
 .navItem.active {
-  color: #161F65;
+  color: var(--primary-color);
 }
 
 /* Remove any transitions */
-.navItem, .navItem svg, .navItem.active, .navItem.active svg {
+.navItem,
+.navItem svg,
+.navItem.active,
+.navItem.active svg {
   transition: none !important;
 }
 
@@ -45,7 +48,7 @@
   .navBarContent {
     padding: 0 0.5rem;
   }
-  
+
   .navItem {
     padding: 0.25rem;
   }
