--- a/frontend/src/pages/SplashPage/components/Page/splashPage.module.css
+++ b/frontend/src/pages/SplashPage/components/Page/splashPage.module.css
@@ -1,44 +1,41 @@
 .page {
-    background-color: #202C83;
+  background-color: var(--primary-color);
 }
 
 /* .page body {
-    background-color: #202C83;
+    background-color: var(--primary-color);
 } */
 
 .page body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
-    margin-bottom: 100px;
+  margin-bottom: 100px;
 }
 
-
 .loader {
-    width: 48px;
-    height: 48px;
-    border: 5px solid #FFF;
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 
-    position: absolute;
+  position: absolute;
 
-    margin-top: 600px;
+  margin-top: 600px;
+}
 
-    }
-
-    @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-    } 
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
