--- a/frontend/src/shared/components/CommonInterest/commonInterest.module.css
+++ b/frontend/src/shared/components/CommonInterest/commonInterest.module.css
@@ -9,16 +9,16 @@
 
 .commonInterest {
   background-color: #d6e4ff;
-  border: 1px solid #202C83;
-  color: #6c5ce7;
+  border: 1px solid var(--primary-color);
+  color: var(--secondary-color);
 }
 
 .commonBadge {
   position: absolute;
   top: -8px;
   right: -5px;
-  background-color: #202C83;
-  color: white;
+  background-color: var(--primary-color);
+  color: var(--header-text-color);
   font-size: 10px;
   padding: 2px 6px;
   border-radius: 10px;
