--- a/frontend/src/shared/components/ToggleButtons/toggleButtons.module.css
+++ b/frontend/src/shared/components/ToggleButtons/toggleButtons.module.css
@@ -1,4 +1,3 @@
-
 .toggleButtons {
   display: flex;
   gap: 10px;
@@ -10,14 +9,16 @@ button {
   border-radius: 20px;
   font-size: 16px;
   cursor: pointer;
-  background-color: #f0f0f0;
-  color: #555; 
-  transition: background-color 0.3s, color 0.3s;
+  background-color: var(--button-background);
+  color: var(--button-color);
+  transition:
+    background-color 0.3s,
+    color 0.3s;
   min-width: 100px;
   text-align: center;
 }
 
 .active {
-  background-color: #202c83; 
-  color: white;
+  background-color: var(--button-active-background);
+  color: var(--button-active-color);
 }
