--- a/frontend/src/pages/LikesPage/components/Page/likesPage.module.css
+++ b/frontend/src/pages/LikesPage/components/Page/likesPage.module.css
@@ -15,7 +15,7 @@
   align-items: center;
   margin-bottom: 10px;
   color: var(--primary-color);
-  font-size: 40px;
+  font-size: 3rem;
   font-family: 'Jost', sans-serif;
   font-weight: medium;
 }
