--- a/frontend/src/pages/ProfilePage/components/ProfileHeader/profileHeader.module.css
+++ b/frontend/src/pages/ProfilePage/components/ProfileHeader/profileHeader.module.css
@@ -26,7 +26,7 @@
   display: flex;
   position: absolute;
   margin-left: 200px;
-  top: 50px;
+  top: 60px;
   padding: -20px;
 }
 
@@ -42,11 +42,14 @@
 }
 
 .previewButton {
-  background-color: #ff2da0;
+  background-color: grey;
   color: white;
-  width: 13px;
-  height: 15px;
+  /* width: 13px; */
+  width: 4px;
+  height: 20px;
   font-weight: normal;
   font-size: 13px;
   margin-top: -180px;
+  /* margin-left: 59px; */
+  margin-right: -20px;
 }
