--- a/frontend/src/shared/components/CustomButton/customButton.module.css
+++ b/frontend/src/shared/components/CustomButton/customButton.module.css
@@ -1,9 +1,9 @@
 .customButton {
-  padding: 0.625rem 1.25rem; /* 10px 20px in rem */
+  padding: 0.625rem 1.25rem;
   background-color: var(--primary-color);
   color: white;
   border: none;
-  border-radius: 1.875rem; /* 30px in rem */
+  border-radius: 1.875rem;
   font-size: 1rem;
   font-weight: bold;
   cursor: pointer;
@@ -12,12 +12,12 @@
     opacity 0.3s;
   outline: none;
   text-align: center;
-  height: 3.125rem; /* 50px in rem */
+  height: 3.125rem;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
-  max-width: 290px; /* Maximum width */
+  max-width: 290px;
 }
 
 .customButton:hover {
@@ -41,13 +41,4 @@
   justify-content: center;
   width: 100%;
   padding: 0 1rem;
-}
-
-/* Responsive adjustments */
-@media (max-width: 480px) {
-  .customButton {
-    max-width: 100%;
-    padding: 0.5rem 1rem;
-    height: 2.75rem; /* Slightly smaller on mobile */
-  }
 }
