--- a/frontend/src/pages/LikesPage/components/MatchCard/matchCard.module.css
+++ b/frontend/src/pages/LikesPage/components/MatchCard/matchCard.module.css
@@ -31,6 +31,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: 17px;
 }
 
 .chatMessage {
@@ -59,7 +60,7 @@
 
 .socialButtons {
   display: flex;
-  gap: 8px;
+  gap: 20px;
   margin-left: auto;
   flex-shrink: 0;
   align-items: center;
